# phantom_bot

./: .env.example  .gitignore  README.md  config.py  developer_helper.md  migrate_users.py  pyproject.toml  user_guide.md
.editor_tools_backups/: migrate_users.py.20260720-001016.bak  migrate_users.py.20260720-001038.bak  migrate_users.py.20260720-001105.bak
bot/: __init__.py  bot.py  main.py
bot/handlers/: command.py  conversation.py  coverpage.py  inline_button.py  keyboard.py  message.py  starter.py
bot/scripts/: gen_string_session.py  update_routine.py  web_screenshot.py  yt_downloader.py
bot/services/: database.py  routine.py  schedule.py  storage.py
bot/services/coverpage/: bulk-config.json  generate.py
cookies/zen/: cookies.sqlite
coverpage/: generate.py  teachers.json
coverpage/config/: subject_detail.json  teacher_subject.json
phantom_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: update_yt_cookies.py
static/routine/: index.html  routine.json
tests/: test.json  test.py
