[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-bot"
version = "0.1.0"
description = "Telegram bot for routine, resources, and admin shortcuts."
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
	"python-telegram-bot>=21,<22",
	"python-dotenv>=1,<2",
	"requests>=2.31,<3",
    "aiohttp>=3.14.1",
	"pymongo[srv]",
	"yt-dlp",
	"telethon==1.44.0",
	"fpdf2>=2.8.7",
	"pillow>=12.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
